--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   </footer>
   <script>
     function aboutblankopen() {
-      window.open('about:blank').document.write(`<head><title>My Drive - Google Drive</title><link rel="shortcut icon" type="image/jpg" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/1147px-Google_Drive_icon_%282020%29.svg.png"/></head><body><style>body {margin: 0;}</style><iframe style="border: none;" src="https://wrld.tk/" width="100%" height="100%"></body>`);
+      window.open('about:blank').document.write(`<head><title>My Drive - Google Drive</title><link rel="shortcut icon" type="image/jpg" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/1147px-Google_Drive_icon_%282020%29.svg.png"/></head><body><style>body {margin: 0;}</style><iframe style="border: none;" src="https://eic.goldenn.dev/1.html?src=U2FsdGVkX1%2FCm9umec0CNWaSpruEp2IdqOikuXqQSZA%3D" width="100%" height="100%"></body>`);
     };
   </script>
   
